# fastapi_project_microshop

./: .gitignore  README.md  items_views.py  main.py  pyproject.toml
api_v1/products/: dependencies.py  schemas.py  views.py
core/: config.py
core/models/: base.py
users/: schemas.py  views.py
