[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Edgar Badalyan",email = "edgar.badalyan.1430@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
